tests/testcases/valid/types/11_incomplete_pointer_return.ciel
// Test: Pointer to incomplete type as function return
// Expected: No error - pointers to incomplete types are allowed

struct ForwardDeclaredStruct;

struct ForwardDeclaredStruct* getObject();

struct ForwardDeclaredStruct {
};

int main(){
    return 0;
}
