tests/testcases/invalid/semantic/49_incomplete_method_return.ciel
// Test: Incomplete type used as method return type
// Expected: Error - incomplete type cannot be used as method return type

struct ForwardDeclaredStruct;

class MyClass {
    public:
        struct ForwardDeclaredStruct getValue();
};

int main(){
    return 0;
}
